# bank-analyzer

./: README.md
bank-analyzer/: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bank-analyzer/chroma_db/: chroma.sqlite3
bank-analyzer/migrations/: env.py
bank-analyzer/migrations/versions/: 168c031b26b6_create_initial_tables.py  1a692e0198cc_add_s3_key_to_statements.py  2e4283b5c2c0_add_s3_key_to_statements.py  a313d60314a7_add_file_hash_to_statements.py
bank-analyzer/src/bank_analyzer/: main.py
bank-analyzer/src/bank_analyzer/api/: auth.py  dashboard.py  deps.py  statements.py  validators.py
bank-analyzer/src/bank_analyzer/core/: config.py  database.py  emuns.py  enums.py  security.py
bank-analyzer/src/bank_analyzer/models/: statement.py  transaction.py  user.py
bank-analyzer/src/bank_analyzer/schemas/: analytics.py  statements.py  token.py  user.py
bank-analyzer/src/bank_analyzer/services/: analytics.py  auth.py  categorizer.py  insight.py  memory.py  parser.py  statement.py  storage.py
bank-analyzer/src/bank_analyzer/templates/: base.html  dashboard.html  statements.html
bank-analyzer/templates/: login.html
bank-analyzer/tests/: conftest.py  test_validators.py
bank-analyzer/tests/integration/: conftest.py  test_auth.py  test_statement.py
bank-analyzer/tests/unit/: test_analytics.py  test_parser.py  test_security.py
